<resources>
    <string name="app_name">绵羊牧场商家版</string>
    <string name="login_input_phone_hint">请输入您的手机号</string>
    <string name="login_input_code_hint">短信验证码</string>
    <string name="login_send_code">发送验证码</string>
    <string name="login_btn">登录</string>
    <string name="mine_shop">我的店铺</string>
    <string name="operating_center">运营中心</string>
    <string name="shop_name">店铺名称</string>
    <string name="shop_owner_name">店主姓名</string>
    <string name="hint_shop_name">请输入店铺名称</string>
    <string name="hint_shop_owner_name">请输入店铺法人姓名</string>
    <string name="contact_phone">联系电话</string>
    <string name="contact_phone_hint">请输入电话号，座机请添加区号</string>
    <string name="shop_type">店铺类型</string>
    <string name="shop_type_hint">请选择店铺类型</string>
    <string name="txt_common_problems">
        1.申请开店需要哪些材料？\n
        门脸照片、店内照片、门店logo、身份证照片、营业执照、餐饮服务许可证等（或其他食品流通许可证等有效证件）。\n\n
        2.开店审核需要多久？\n
        提交申请后，1~3个工作日内将会有市场经理线下审核店铺信息，如超时未处理，您可直接联系市场经理。\n\n
        3.提交申请后，如何查询审核结果？\n
        您可通过“绵羊商城店铺版”App、小程序 查看当前审核状态。\n\n
        4.店铺之前无效了，可以重新上线吗？\n
        可以，实体店双证齐全可直接点击“我要开店”按钮申请开店。\n\n
        5.无实体店或单证可以上线吗？\n
        不可以，网上开店必须有线下实体门店，并且需要准备好营业执照与餐饮服务许可证（或其他类许可证等)。
    </string>
    <!--zxing-->
    <string name="msg_camera_framework_bug">相机被占用或没有相机权限，请检查</string>
    <string name="button_ok">退出</string>
    <string name="scan_code">扫一扫</string>
    <string name="open_flash">打开闪光灯</string>
    <string name="close_flash">关闭闪光灯</string>
    <string name="gallery">相册</string>
    <string name="scan_failed_tip">图片解析失败，换个图片试试.</string>
    <string name="folder_all">全部图片</string>
    <string name="preview">Preview</string>
    <string name="msg_no_camera">No system camera found</string>
    <string name="msg_amount_limit">最多选择3张图</string>
    <string name="action_done">完成</string>
    <string name="photo_unit">Shot</string>
    <string name="tip_take_photo">Take photo</string>
    <string name="text">绵羊牧场商家版APP我的店铺和运营中心服务依据以下条件和条款为您提供所享有的服务,
请仔细阅读并遵守。
        \n
一、总则
1.1本《绵羊牧场商家版店铺政策》（以下简称店铺政策）为您（即商户）与合创数科（辽
宁）智能化科技技术有限公司（以下简称绵羊牧场）就绵羊牧场商家版APP我的店铺和运
营中心服务达成的协议。绵羊牧场在此特别提醒您认真阅读、充分理解本协议。商户应认真
阅读、充分理解本协议中各条款，特别涉及免除或者限制绵羊牧场责任的免责条款，对商户
的权利限制的条款，法律适用、争议解决方式的条款。
1.2本协议可由绵羊牧场随时更新，更新后的协议条款一旦公布即代替原来的协议条款，不
再另行个别通知。您可在网站查阅最新版协议条款。在绵羊牧场修改本协议条款后，如果您
不接受修改后的条款，请立即停止使用绵羊牧场提供的服务，您继续使用绵羊牧场提供的服
务将被视为已接受了修改后的协议。
\n二、定义
2.1绵羊牧场：是搭建、提供及维护绵羊牧场商家版APP我的店铺、运营中心服务信息发布
的平台，用户和商户通过绵羊牧场平台对线下代金券使用换购，生鲜商品外卖业务达成合意。
2.2用户：是指在绵羊牧场平台上购买生鲜套餐商品，代金券换购等需求、创建任务事项信
息的具有完全民事权利能力和行为能力的自然人。
2.3商户：即本协议中的“您”，是指通过绵羊牧场平台自主选择接受用户发布的绵羊牧场
商家版APP我的店铺、运营中心服务任务信息、完成任务事项的依据中国法律合法成立并
有效存续的法人或其他商事主体。我的店铺主要业务服务为代金券添加与扫码用户代金券、
退券等，运营中心主要服务为生鲜商品添加与订单处理等。
\n三、商户的权利和义务
3.1商户应保证其为一家依据中国法律合法成立并有效存续的法人或其他商事主体，能够独
立承担法律责任，并具有履行本合同所需一切权利及能力；同时商户应当提供盖章的资质证
明复印件，如涉及特殊行业需要特定的资质或许可证等的，商户也应予以提供。前述资料包
括但不限于商户营业执照、前置许可证件、生鲜商品说明、页面信息文案所需资料（包括图
片、商家介绍）等。商户保证提供的文件内容真实有效，不侵犯任何第三方的合法权益，由
于信息虚假或不准确造成的一切后果与损失均由商户承担。商户的名称、地址和有效联系方
式、许可证等信息发生变化的，商户应在一个工作日内书面或电话通知绵羊牧场。由于商户
未及时通知，给商户自身及绵羊牧场造成的一切损失均由商户承担。
3.2商户应向绵羊牧场提供我的店铺-代金券模板扫码，运营中心生鲜商品外卖的具体信息
和详细说明。商户应保证自身具备提供本合同项下商品及履行本合同项下商户提供商品外卖
活动所有必要的资质批文、管理制度及合格人员，送达或线下兑换绵羊牧场用户的生鲜商品
与页面描述一致且质量合格。
3.3商户提供的生鲜商品应符合国家法律、法规、规章的规定。如因商户外卖商品存在质量
或安全问题造成绵羊牧场用户投诉、索赔、经济损失等相关后果均由商户承担，如绵羊牧场
基于前述情况向消费者先行赔付的，绵羊牧场有权向商户追偿，追偿方式包括但不限于在结
算给商户的相关款项中直接扣除该赔付金额。
3.4商户为绵羊牧场开辟绿色通道，具体事宜如：商户在接收到绵羊牧场用户的订单后，应
优先处理绵羊牧场用户的订单，并由商户负责将订单中所述的商品及时送达至绵羊牧场用
户。配送送达过程采取合理包装及方式，保证送达绵羊牧场用户商品安全、及时、无污染。
3.5商户不应就在线标注价格之外向绵羊牧场用户收取任何线下费用。如绵羊牧场用户所订
购商品售罄，经商户与绵羊牧场用户沟通后，商户可就替代商品线下向用户收取差价部分。
3.6如绵羊牧场用户要求就餐发票，由商户负责全额提供，绵羊牧场系统通知商户用户下单
信息后，如商户因商品售罄等原因，不能提供的，商户应立即电话通知下单信息的用户和绵
羊牧场，并做好合理的安抚和处理措施，如因此造成绵羊牧场用户投诉、经济损失等相关后
果均由商户承担。
3.7商户应严格按照双方协商签订的活动方案为绵羊牧场用户提供相应的优惠价格或赠品，
不允许出现故意拒不提供的行为，否则由此产生的用户投诉和损失均由商户承担。
3.8商户承诺自己在使用绵羊牧场时不会出现以下违规行为，如因出现以下违规行为导致任
何法律后果的发生，由商户自行承担所有法律责任：
3.8.1违反国家法律、法规要求以及各种社会公共利益或公共道德的行为；
3.8.2违反绵羊牧场相关规定的行为（包括但不限于制造虚假订单、利用系统漏洞获取利润、
违规套现、对用户消费欺诈、无故取消订单、无故拒绝配送等）；
3.8.3其他损害绵羊牧场平台、用户和其他商户利益的行为。
3.9商户可以通过手机号码验证绵羊牧场商家版App，商户应对手机号及验证码实施的行为
负责，商户不得以任何形式将手机号和验证码转让或泄露给第三方。
3.10商户提供的银行账户信息须准确，如发生变更应立即通知绵羊牧场，否则，由此造成
的款项延误等后果均由商户承担。
3.11商户保证经营场所内实际销售价格不得低于商品在线标注价格，且不得唆使或引导绵
羊牧场用户放弃在绵羊牧场上订餐服务，改为其他形式的商户和绵羊牧场用户直接交易，否
则绵羊牧场有权立即终止合作并要求商户按照协议第六条承担违约责任。
3.12商户同意绵羊牧场可能会与第三方合作向商户提供相关的网络服务，在此情况下，如
该第三方同意承担与绵羊牧场同等的保护用户隐私的责任，则绵羊牧场有权将用户的信息资
料等提供给该第三方。另外，在不透露单个商户隐私资料的前提下，绵羊牧场有权对整个商
户数据库进行分析并对商户数据库进行商业上的利用。
3.13商户同意绵羊牧场拥有通过信息推送、平台公示、短信、电话、邮件等形式向您通知
告知信息的权利，商户允许平台向其发送商业性电子信息。
\n四、绵羊牧场权利与义务
4.1绵羊牧场为商户提供本协议项下约定的绵羊牧场套餐商品展示，并按照绵羊牧场平台约
定向商户收取服务费。
4.2绵羊牧场为商户在消费群体中做相关宣传介绍并进行相关推荐，以提升商户的知名度。
商户同意授权绵羊牧场使用其品牌、LOGO、名称、商标等知识产权。
4.3绵羊牧场有权对商户拟在绵羊牧场发布的内容、信息进行审核，必要时可删改。绵羊牧
场有权对不符合法律法规、政策规定的内容或任何侵犯第三方合法权益的内容予以删改或拒
绝发布，但甲乙双方确认，绵羊牧场的前述审核、删改不为绵羊牧场设置任何义务，也不免
除商户根据本协议应承担的责任。
4.4如任何第三方向绵羊牧场投诉，绵羊牧场经核实后，有权要求商户配合解决该投诉。如
出现不符合法律法规、政策规定或侵犯第三方合法权益的内容的，绵羊牧场有权在不通知商
户的情况下做下线处理。
4.5商户店铺内所售品类如有违反绵羊牧场平台经营范围的相关规定或有向消费者私自售
卖违禁品的行为，绵羊牧场平台有权按照相关规定对商户进行处罚，并举报至相关行政主管
部门。
4.6如活动方案中涉及绵羊牧场承担相应成本费用的内容，则绵羊牧场应按合同中双方约定
的结算方式，定期由绵羊牧场系统自动结算的方式为商户支付活动期间产生的成本费用。
4.7绵羊牧场用户退订情形，绵羊牧场应在收到退订申请后告知商户取消对应订单相关项
目。商户应根据绵羊牧场通知做相应的调整。
4.8如商户违反本协议第三条项下约定的义务，绵羊牧场有权随时停止提供服务，并操作商
户商品信息下线。
4.9本协议项下服务终止时，绵羊牧场有权删除绵羊牧场上订餐上的商户已发布的外卖商品
信息，且有权拒绝向商户提供相关信息；绵羊牧场有权保存商户资质信息、商品信息、交易
记录等相关资料。
\n五、知识产权
5.1双方的品牌归各自所有。双方均不可在对方未经授权的情况下使用对方名称、Logo以及
涉及相关内容的销售、促销宣传材料及广告、报纸、杂志、宣传单等，如因此产生的所有不
良后果及损失违约方全部承担。本协议第4.2条有约定的除外。
\n六、食品安全保障
6.1商户提供的资质应符合国家相关法律的规定，并且符合发布相关商品的要求，当平台要
求提供时可以在24小时内提供资质完成备案，如果因无法提供相关资质导致平台的损失需
要由商户承担。
6.2商户提供的生鲜商品应符合国家法律、法规、规章的规定。如因商户生鲜商品存在质量
或安全问题造成绵羊牧场用户投诉、索赔、经济损失等相关后果均由商户承担，如绵羊牧场
基于前述情况向消费者先行赔付的，绵羊牧场有权向商户追偿，追偿方式包括但不限于在结
算给商户的相关款项中直接扣除该赔付金额。
\n七、违约责任
7.1任何一方违反本协议所规定的义务导致另一方受到包括但不限于投诉、举报、诉讼或处
罚、赔偿等损失，违约方在收到守约方要求纠正其违约行为的书面通知之日，应立即停止其
违约的行为，并在10日内赔偿守约方因此受到的所有损失。
7.2本协议任何一方均应对其获得的对方的业务、经营、财务状况和其他保密资料予以严格
保密，不得以任何形式向任何第三方披露。如因任何一方未能履行保密义务而给其他方造成
任何损失的，应承担赔偿责任。
\n八、免责条款
8.1不论在何种情况下，绵羊牧场均不对由于互联网正常的设备维护，互联网络连接故障，
电脑、通讯或其他系统的故障，电力故障，黑客攻击、病毒侵袭、罢工，劳动争议，暴乱，
起义，骚乱，生产力或生产资料不足，火灾，洪水，风暴，爆炸，战争，政府行为，司法行
政机关的命令或第三方的不作为而造成的不能服务或延迟服务承担责任。
8.2商户同意自行承担使用网络服务的风险，绵羊牧场不作任何类型的担保，包括但不限于：
不担保服务一定能满足商户的要求；不担保服务不会受中断，对服务的及时性，安全性，出
错发生不担保；对在绵羊牧场上以及第三方合作得到的任何服务或交易进程，不作担保；对
绵羊牧场服务所涉及的技术及信息的有效性、准确性、正确性、可靠性、稳定性、完整性和
及时性不作出任何承诺和保证；不担保绵羊牧场服务的适用性没有错误或疏漏。
\n九、争议解决
9.1本政策的订立、执行和解释及争议的解决均应适用中华人民共和国法律。
9.2就本政策内容或执行发生任何争议，应友好协商解决。协商不成时，均可向被告所在地
的有管辖权的法院诉讼解决。</string>
    <string name="quick_input">快捷输入</string>


    <string name="activity_shop_business_information_text_0">店铺信息</string>
    <string name="activity_shop_business_information_text_1">营业资格</string>
    <string name="activity_shop_business_information_text_2">法人手持\n身份证</string>
    <string name="activity_shop_business_information_text_3">正面</string>
    <string name="activity_shop_business_information_text_4">反面</string>
    <string name="activity_shop_business_information_text_5">营业执照</string>
    <string name="activity_shop_business_information_text_6">法人照片姓名与营业执照必须一致</string>
    <string name="activity_shop_business_information_text_7">许可证</string>
    <string name="activity_shop_business_information_text_8">法人照片姓名与许可证必须一致</string>
    <string name="activity_shop_business_information_text_9">下一步</string>
    <string name="feedback">请填写反馈内容详情，最少填写十个文字哦</string>
</resources>
