<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_44"
        android:background="@color/color_green_theme">

        <ImageView
            android:id="@+id/title_back"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_20"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp_20"
            android:src="@mipmap/back_white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/activity_shop_business_information_text_0"
            android:textColor="#ffffffff"
            android:textSize="18sp" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="34dp"
                android:text="@string/activity_shop_business_information_text_1"
                android:textColor="#ff333333"
                android:textSize="19sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="11dp"
                android:layout_marginTop="33dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/icon_will_choose" />

                <TextView
                    android:layout_width="65dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/activity_shop_business_information_text_2"
                    android:textColor="#ff323232"
                    android:textSize="16sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/iv_identity_card_front"
                            android:layout_width="@dimen/dp_64"
                            android:layout_height="@dimen/dp_64"
                            android:layout_centerInParent="true"
                            android:scaleType="centerCrop"
                            android:src="@drawable/icon_camera"
                            android:visibility="visible" />


                        <RelativeLayout
                            android:id="@+id/rela_identity_card_front"
                            android:layout_width="@dimen/dp_64"
                            android:layout_height="@dimen/dp_64"
                            android:layout_marginStart="@dimen/dp_10"
                            android:background="@color/color_EDF5F2"
                            android:visibility="gone">

                            <ImageView
                                android:id="@+id/iv_identity_card_front_showPic"
                                android:layout_width="@dimen/dp_64"
                                android:layout_height="@dimen/dp_64" />

                            <ImageView
                                android:id="@+id/iv_identity_card_deletePic"
                                android:layout_width="@dimen/dp_16"
                                android:layout_height="@dimen/dp_16"
                                android:layout_alignParentRight="true"
                                android:src="@drawable/ic_circle_delete_pic" />
                        </RelativeLayout>


                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/activity_shop_business_information_text_3"
                        android:textColor="@color/black_3" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/iv_identity_card_behind"
                            android:layout_width="@dimen/dp_64"
                            android:layout_height="@dimen/dp_64"
                            android:layout_centerInParent="true"
                            android:scaleType="centerCrop"
                            android:src="@drawable/icon_camera"
                            android:visibility="visible" />


                        <RelativeLayout
                            android:id="@+id/rela_identity_card_behind"
                            android:layout_width="@dimen/dp_64"
                            android:layout_height="@dimen/dp_64"
                            android:layout_marginLeft="@dimen/dp_10"
                            android:background="@color/color_EDF5F2"
                            android:visibility="gone">

                            <ImageView
                                android:id="@+id/iv_identity_card_behind_showPic"
                                android:layout_width="@dimen/dp_64"
                                android:layout_height="@dimen/dp_64" />

                            <ImageView
                                android:id="@+id/iv_identity_card_behind_deletePic"
                                android:layout_width="@dimen/dp_16"
                                android:layout_height="@dimen/dp_16"
                                android:layout_alignParentRight="true"
                                android:src="@drawable/ic_circle_delete_pic" />
                        </RelativeLayout>


                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/activity_shop_business_information_text_4"
                        android:textColor="@color/black_3" />
                </LinearLayout>


            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="21dp"
                android:layout_marginRight="25dp"
                android:background="@color/color_green_hint" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="11dp"
                android:layout_marginTop="33dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/icon_will_choose" />

                <TextView
                    android:layout_width="65dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/activity_shop_business_information_text_5"
                    android:textColor="#ff323232"
                    android:textSize="16sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/iv_business_license"
                            android:layout_width="@dimen/dp_64"
                            android:layout_height="@dimen/dp_64"
                            android:layout_centerInParent="true"
                            android:scaleType="centerCrop"
                            android:src="@drawable/icon_camera"
                            android:visibility="visible" />


                        <RelativeLayout
                            android:id="@+id/rela_business_license"
                            android:layout_width="@dimen/dp_64"
                            android:layout_height="@dimen/dp_64"
                            android:layout_marginLeft="@dimen/dp_10"
                            android:background="@color/color_EDF5F2"
                            android:visibility="gone">

                            <ImageView
                                android:id="@+id/iv_business_license_showPic"
                                android:layout_width="@dimen/dp_64"
                                android:layout_height="@dimen/dp_64" />

                            <ImageView
                                android:id="@+id/iv_business_license_deletePic"
                                android:layout_width="@dimen/dp_16"
                                android:layout_height="@dimen/dp_16"
                                android:layout_alignParentRight="true"
                                android:src="@drawable/ic_circle_delete_pic" />
                        </RelativeLayout>


                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/activity_shop_business_information_text_6"
                        android:textColor="@color/black_3" />
                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="21dp"
                android:layout_marginRight="25dp"
                android:background="@color/color_green_hint" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="11dp"
                android:layout_marginTop="33dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/icon_will_choose" />

                <TextView
                    android:layout_width="65dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/activity_shop_business_information_text_7"
                    android:textColor="#ff323232"
                    android:textSize="16sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/iv_license"
                            android:layout_width="@dimen/dp_64"
                            android:layout_height="@dimen/dp_64"
                            android:layout_centerInParent="true"
                            android:scaleType="centerCrop"
                            android:src="@drawable/icon_camera"
                            android:visibility="visible" />


                        <RelativeLayout
                            android:id="@+id/rela_license"
                            android:layout_width="@dimen/dp_64"
                            android:layout_height="@dimen/dp_64"
                            android:layout_marginStart="@dimen/dp_10"
                            android:background="@color/color_EDF5F2"
                            android:visibility="gone">

                            <ImageView
                                android:id="@+id/iv_license_showPic"
                                android:layout_width="@dimen/dp_64"
                                android:layout_height="@dimen/dp_64" />

                            <ImageView
                                android:id="@+id/iv_license_deletePic"
                                android:layout_width="@dimen/dp_16"
                                android:layout_height="@dimen/dp_16"
                                android:layout_alignParentRight="true"
                                android:src="@drawable/ic_circle_delete_pic" />
                        </RelativeLayout>


                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/activity_shop_business_information_text_8"
                        android:textColor="@color/black_3" />
                </LinearLayout>
            </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="21dp"
                android:layout_marginRight="25dp"
                android:background="@color/color_green_hint" />


            <Button
                android:id="@+id/btn_next_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/dp_48"
                android:layout_marginTop="30dp"
                android:layout_marginRight="@dimen/dp_48"
                android:layout_marginBottom="30dp"
                android:background="@drawable/btn_login_red_theme"
                android:text="@string/activity_shop_business_information_text_9"
                android:textColor="@color/white" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>