<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_44"
        android:layout_below="@id/view"
        android:background="#F3F3F3">

        <ImageView
            android:id="@+id/title_back"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_20"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp_20"
            android:src="@mipmap/icon_back_black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="更换手机号"
            android:textColor="#ff323232"
            android:textSize="18sp" />
    </RelativeLayout>

    <ImageView
        android:layout_width="256dp"
        android:layout_height="132dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="72dp"
        android:background="@drawable/icon_login_logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_44"
        android:layout_marginLeft="@dimen/dp_48"
        android:layout_marginTop="@dimen/dp_40"
        android:layout_marginRight="@dimen/dp_48"
        android:background="@drawable/bg_login_input"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="18dp"
            android:background="@drawable/icon_login_input_phone" />

        <EditText
            android:id="@+id/edt_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="17dp"
            android:layout_marginRight="5dp"
            android:background="@null"
            android:hint="@string/login_input_phone_hint"
            android:inputType="number"
            android:maxLength="11"
            android:textColor="@color/c5"
            android:textColorHint="@color/c5"
            android:textSize="14dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginLeft="47dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="47dp"
        android:background="@drawable/bg_login_input"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="18dp"
            android:background="@drawable/icon_login_input_pass" />

        <EditText
            android:id="@+id/edt_code"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="17dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/login_input_code_hint"
            android:inputType="number"
            android:maxLength="4"
            android:textColor="@color/c5"
            android:textColorHint="@color/c5"
            android:textSize="14dp" />

        <Button
            android:id="@+id/btn_send_code"
            android:layout_width="82dp"
            android:layout_height="match_parent"
            android:background="@drawable/bg_send_code_gray"
            android:text="@string/login_send_code"
            android:textColor="@color/white"
            android:textSize="14dp" />
    </LinearLayout>


    <Button
        android:id="@+id/btn_login"
        android:layout_width="280dp"
        android:layout_height="44dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp_54"
        android:background="@drawable/bg_login_green"
        android:text="确认更换"
        android:textColor="@color/white"
        android:textSize="15dp" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="82dp"
            android:layout_alignParentBottom="true"
            android:background="@drawable/login_bottom" />
    </RelativeLayout>
</LinearLayout>