<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_20"
        android:background="@color/f3" />

    <RelativeLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_44"
        android:layout_below="@id/view"
        android:background="#F3F3F3">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="绵羊牧场商家版"
            android:textColor="#ff323232"
            android:textSize="18sp" />
    </RelativeLayout>

    <ImageView
        android:layout_width="256dp"
        android:layout_height="132dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="72dp"
        android:background="@mipmap/center_logo_pic" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginLeft="47dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="47dp"
        android:background="@drawable/bg_login_input"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="18dp"
            android:background="@drawable/icon_login_input_phone" />

        <EditText
            android:id="@+id/edt_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="17dp"
            android:layout_marginRight="5dp"
            android:background="@null"
            android:hint="@string/login_input_phone_hint"
            android:inputType="number"
            android:maxLength="11"
            android:textColor="@color/black_3"
            android:textColorHint="@color/c5"
            android:textSize="14dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginLeft="47dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="47dp"
        android:background="@drawable/bg_login_input"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="18dp"
            android:background="@drawable/icon_login_input_pass" />

        <EditText
            android:id="@+id/edt_code"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="17dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/login_input_code_hint"
            android:inputType="number"
            android:maxLength="4"
            android:textColor="@color/black_3"
            android:textColorHint="@color/c5"
            android:textSize="14dp" />

        <Button
            android:id="@+id/btn_send_code"
            android:layout_width="82dp"
            android:layout_height="match_parent"
            android:background="@drawable/bg_send_code_gray"
            android:focusable="false"
            android:text="@string/login_send_code"
            android:textColor="@color/white"
            android:textSize="14dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="17dp"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/cb_agreement"
            android:layout_width="19dp"
            android:layout_height="19dp"
            android:layout_gravity="center_vertical"
            android:button="@drawable/bg_red_check" />

        <TextView
            android:id="@+id/tv_read"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="7dp"
            android:text="我已阅读并同意"
            android:textColor="@color/black_3"
            android:textSize="11sp" />

        <TextView
            android:id="@+id/tv_shop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="《店铺协议》"
            android:textColor="@color/color_green_theme"
            android:textSize="11sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="和"
            android:textColor="@color/black_3"
            android:textSize="@dimen/sp_11" />

        <TextView
            android:id="@+id/tv_privacy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="《隐私政策》"
            android:textColor="@color/color_green_theme"
            android:textSize="@dimen/sp_11" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="280dp"
        android:layout_height="44dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="21dp"
        android:background="@drawable/bg_login_theme_red"
        android:text="@string/login_btn"
        android:textColor="@color/white"
        android:textSize="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="21dp"
        android:text="未注册手机号验证后自动注册"
        android:textColor="#ff9aacbd"
        android:textSize="11sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="82dp"
            android:layout_alignParentBottom="true"
            android:background="@mipmap/c_login_bottom_pic" />
    </RelativeLayout>
</LinearLayout>